  * Add undocumented tc-fq_codel flags to manpage and bash completion
  * Copy fq_codel code for jens (appropriately renamed), removing noecn
  * sch_jens: always uses ECN marking, TCA_JENS_ECN no longer exists
  * NOTE: current jens_uapi is *NOT* stable yet, especially reporting
    and stats will be fleshed out later
  * Correct printing of limit, for reentrancy (jens only)

 -- Thorsten Glaser <t.glaser@tarent.de>  Mon, 14 Jun 2021 20:30:43 +0200

iproute2 (5.10.0-4~bpo10+1) buster-backports; urgency=medium

  * Rebuild for buster-backports.
  * Merge tag 'debian/5.10.0-4' into buster-backports

 -- Luca Boccassi <bluca@debian.org>  Tue, 02 Mar 2021 15:54:56 +0000

iproute2 (5.10.0-4) unstable; urgency=medium

  * Backport 0012-iproute-force-rtm_dst_len-to-32-128.patch to fix ip
    route get with netmask (Closes: #944730)
  * Add d/not-installed file
  * Bump debhelper-compat to 13

 -- Luca Boccassi <bluca@debian.org>  Fri, 05 Feb 2021 23:34:59 +0000

iproute2 (5.10.0-3) unstable; urgency=medium

  * Backport patches to fix ip vrf exec (Closes: #980046)

 -- Luca Boccassi <bluca@debian.org>  Sun, 17 Jan 2021 23:11:31 +0000

iproute2 (5.10.0-2) unstable; urgency=medium

  * Backport patches from iproute2-next to support libbpf
  * Add build-dependency on libbpf-dev
  * Remove duplicated lines from iproute2.lintian-overridess

 -- Luca Boccassi <bluca@debian.org>  Sat, 26 Dec 2020 15:16:36 +0000

iproute2 (5.10.0-1) unstable; urgency=medium

  * Update upstream source from tag 'upstream/5.10.0'
    (Closes: #972784, #949235)
  * Bump Standards-Version to 4.5.1, no changes

 -- Luca Boccassi <bluca@debian.org>  Sun, 20 Dec 2020 22:47:37 +0000

iproute2 (5.9.0-1~bpo10+1) buster-backports; urgency=medium

  * Rebuild for buster-backports
  * Merge tag 'debian/5.9.0-1' into buster-backports

 -- Luca Boccassi <bluca@debian.org>  Fri, 13 Nov 2020 09:43:09 +0000

iproute2 (5.9.0-1) unstable; urgency=medium

  * Update upstream source from tag 'upstream/5.9.0'
